@@ -2,6 +2,7 @@
 
     * Wrap the ‘fromlist’ parameter of ‘__import__’ for Python 3
       compatibility.
+    * Migrate to JSON (instead of Python) for serialised version info.
 
 2014-12-08  Ben Finney  <ben+python@benfinney.id.au>
 
